--- a/src/app/flood-dashboard/flood-dashboard.component.html
+++ b/src/app/flood-dashboard/flood-dashboard.component.html
@@ -4,6 +4,9 @@
 <div class="dashboard">
     <app-past-flood-table></app-past-flood-table>
     <app-future-flood-table></app-future-flood-table>
-  </div>
+    <button mat-raised-button color="primary" (click)="openPredictionModal()">
+        Predict Flood Possibility
+      </button>
+</div>
   
   
