--- a/src/app/future-flood-table/future-flood-table.component.html
+++ b/src/app/future-flood-table/future-flood-table.component.html
@@ -1,1 +1,22 @@
-<p>future-flood-table works!</p>
+<mat-card>
+    <mat-card-title>Future Floods</mat-card-title>
+    <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <ng-container matColumnDef="date">
+        <mat-header-cell *matHeaderCellDef> Date </mat-header-cell>
+        <mat-cell *matCellDef="let flood"> {{ flood.date }} </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="area">
+        <mat-header-cell *matHeaderCellDef> Area </mat-header-cell>
+        <mat-cell *matCellDef="let flood"> {{ flood.area }} </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="riskLevel">
+        <mat-header-cell *matHeaderCellDef> Risk Level </mat-header-cell>
+        <mat-cell *matCellDef="let flood"> {{ flood.riskLevel }} </mat-cell>
+      </ng-container>
+  
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    </mat-table>
+    <mat-paginator [pageSize]="5" showFirstLastButtons></mat-paginator>
+  </mat-card>
+  
