--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -1,5 +1,5 @@
 #map {
-    height: 400px; 
-    width: 100%;
-  }
-  
+  width: 100%;
+  height: 500px; /* Set the desired height of the map */
+  position: relative;
+}
